Fixed the sheets generation